scrollbar style: fix style for Chromium

--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,14 @@ select
     -moz-osx-font-smoothing: grayscale;
 }
 
-*
+
+
+@supports not selector(::-webkit-scrollbar)
 {
-    scrollbar-width: thin;
+    *
+    {
+        scrollbar-width: thin;
+    }
 }
 
 *::-webkit-scrollbar
